# nixos-server

./: .gitignore  README.md  flake.nix  pyproject.toml
device-id/: default.nix
device-id/test/: default.nix
disko/: os-ext4.nix  zfs-raid.nix
docs/: ai-setup.md
docs/adr/: 0001-sops-nix-for-secrets.md  0002-k3s-as-container-orchestrator.md  0003-keepalived-vip-for-k3s-bootstrap.md  0004-llama-cpp-as-host-systemd-service.md  0005-per-instance-identity-via-flake-input-override.md  0006-expose-reusable-components-as-nixosmodules.md  0007-cloudflare-tunnels-for-ingress-and-private-access.md  0008-bind-read-only-paths-for-user-files-in-system-services.md
docs/changes/: 2026-05-26-disko-machine-provisioning-requirement.md  2026-06-19-profile-driven-disko-plan.md  2026-06-19-profile-driven-disko-requirement.md  2026-06-24-ai-profile-llama-cpp-plan.md  2026-06-24-ai-profile-llama-cpp-requirement.md  2026-06-24-k3s-first-node-vip-plan.md  2026-06-24-k3s-first-node-vip-requirement.md  2026-06-25-hardware-derived-identity-plan.md  2026-06-25-hardware-derived-identity-requirement.md  2026-07-02-expose-nixos-modules-plan.md  2026-07-02-expose-nixos-modules-requirement.md  (+6 more)
hosts/: mk-host.nix
hosts/ai/: default.nix
modules/: device-identity.nix
profiles/: ai.nix  base.nix  compute.nix  nas.nix
secrets/: .sops.yaml  README.md  secrets-example.yaml
services/: backup-target.nix  cloudflare-tunnels.nix  file-sharing.nix  hermes-gateway.nix  k3s.nix  llama-cpp.nix  llama-server.nix  media-stack.nix  monitoring-agent.nix
tests/: test_provision.py  test_sops_yaml.py
(+24 files in other folders)
