[project]
name = "provision"
version = "0.1.0"
description = "Provisioning wrapper for nixos-anywhere with per-instance device-id"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
provision = "provision.provision:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["scripts"]
